# swaggerDocs.json
@@ -249,6 +249,15 @@
               "properties": {
                 "opportunityId": {
                   "example": "any"
+                },
+                "coverLetter": {
+                  "example": "any"
+                },
+                "resumeUrl": {
+                  "example": "any"
+                },
+                "cvFile": {
+                  "example": "any"
                 }
               }
             }
@@ -263,6 +272,9 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
